--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,21 @@
-<p>header works!</p>
-<!-- <div mdbDropdown class="dropdown">
+<header>
+    <nav id="maxWidth">
+        <div id="titleFrame">
+            <div id="marcoAnimado" >
+                <img class="img-thumbnail rounded-circle" src="../../../assets/img/logo.png" alt="logo">
+            </div>
+            <p id="owner"></p>
+        </div>
+        <ul>
+            <li><span>inicio</span></li>
+            <li><span>proyectos</span></li>
+            <li><span>contacto</span></li>
+            <li><span>redes</span></li>
+        </ul>
+    </nav>
+</header>
+
+<div mdbDropdown class="dropdown">
     <button
       class="btn btn-primary dropdown-toggle"
       type="button"
@@ -14,8 +30,8 @@
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
     </ul>
-</div> -->
-<!-- <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
+</div>
+<mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
     <mdb-carousel-item>
       <img
         src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).webp"
@@ -49,4 +65,4 @@
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
     </mdb-carousel-item>
-  </mdb-carousel> -->
+  </mdb-carousel>
