MDB funcionando habiendo agregado footer, todo funciona correctamente ahora.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,7 @@
-<p>footer works!</p>
-<mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
+<footer>
+    <p>© 2023 ErMagus / Jose Manuel Correa Castro</p>
+</footer>
+<!-- <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'">
     <mdb-carousel-item>
       <img
         src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).webp"
@@ -33,9 +35,9 @@
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
     </mdb-carousel-item>
-  </mdb-carousel> 
+  </mdb-carousel>  -->
 
-  <div mdbDropdown class="dropdown">
+  <!-- <div mdbDropdown class="dropdown">
     <button
       class="btn btn-primary dropdown-toggle"
       type="button"
@@ -50,4 +52,4 @@
       <li><a class="dropdown-item" href="#">Another action</a></li>
       <li><a class="dropdown-item" href="#">Something else here</a></li>
     </ul>
-</div>
+</div> -->
