--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -119,6 +119,11 @@ main{
                             width: 40%;
                         }
                     }
+                    .certificados{
+                        button{
+                            margin-bottom: 10px;
+                        }
+                    }
                 }
             } 
         }
@@ -191,6 +196,11 @@ main{
                         img {
                             width: 40%;
                             max-width:30vh;
+                        }
+                    }
+                    .certificados{
+                        button{
+                            margin-bottom: 30px;
                         }
                     }
                 }
