Agregando condicionales para abrir el modal del main de la pagina principal para evitar choques con otros componentes, ademas de darle reusabilidad al verificar que tipo de boton doy click para que, por medio de un ngIf muestre el modal deseado en un mismo componente de modal

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
             <p id="owner"></p>
         </div>
         <ul>
-            <li><span>inicio</span></li>
+            <li (click)="goToHome()"><span>inicio</span></li>
             <li><span>proyectos</span></li>
             <li><span>contacto</span></li>
             <li><span>redes</span></li>
