--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,4 +1,5 @@
-<div class="modal-header {{bgColor}}">
+<div *ngIf="path === '/home'">
+  <div class="modal-header {{bgColor}}">
     <h5 class="modal-title {{titleColor}}" id="exampleModalLabel">{{ title }}</h5>
     <button
       type="button"
@@ -6,13 +7,14 @@
       aria-label="Close"
       (click)="modalRef.close()"
     ></button>
-</div>
-<div class="modal-body {{bgColor}}">
-  <img src="{{ src }}" class="img-fluid" alt="..." />
-</div>
-<div class="modal-footer {{bgColor}}">
-  <!-- <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
-    Close
-  </button>
-  <button type="button" class="btn btn-primary">Save changes</button> -->
+  </div>
+  <div class="modal-body {{bgColor}}">
+    <img src="{{ src }}" class="img-fluid" alt="..." />
+  </div>
+  <div class="modal-footer {{bgColor}}">
+    <!-- <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+      Close
+    </button>
+    <button type="button" class="btn btn-primary">Save changes</button> -->
+  </div>
 </div>
