--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="path === '/home'">
+<div *ngIf="path === '/home' && originBtn === 'certsBtn'">
   <div class="modal-header {{bgColor}}">
     <h5 class="modal-title {{titleColor}}" id="exampleModalLabel">{{ title }}</h5>
     <button
@@ -16,5 +16,24 @@
       Close
     </button>
     <button type="button" class="btn btn-primary">Save changes</button> -->
+  </div>
+</div>
+
+<div *ngIf="path === '/home' && originBtn === 'btnKnows'">
+  <div class="modal-header">
+    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modalRef.close()"
+    ></button>
+  </div>
+  <div class="modal-body">...</div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+      Close
+    </button>
+    <button type="button" class="btn btn-primary">Save changes</button>
   </div>
 </div>
