FrontPage Finalizado, funcionando los botones de conocimientos y certificaciones

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,7 +5,7 @@ footer{
     align-items: center;
     margin-top: -1px;
     height: 5vh;
-    background: linear-gradient(0deg, rgba(252,70,74,1) 74%, rgba(63,94,251,1) 100%);
+    background: linear-gradient(0deg, #11232F 74%, transparent 100%);
     font-size: .8em;
     p{
         margin: 0;
