--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,10 +5,15 @@
     </div>
     <section class="parent">
         <span>¿Quien soy?</span>
-        <article>
+        <article id="AboutMe">
             <p>
                 Soy un desarrollador web, me gusta mucho el diseño y la
                 programación. Me encanta trabajar en equipo y aprender de los demás.
+            </p>
+            <p>
+                Comence aprendiendo lo básico sobre fundamentos de la programación para tener una idea
+                clara de cómo confeccionar mi código a travez de cualquier lenguaje de programacion
+                y actualmente aprendo y mejorar mis conocimientos sobre desarrollo Front y Backend
             </p>
         </article>
         <span>¿Cuales son mis conocimientos?</span>
