--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -1,3 +1,16 @@
 // .modalCertificates{
 //     background-color: aquamarine;
 // }
+
+.modal-header{
+    #mdlKnowImg{
+        height: 3em;
+    }
+}
+
+.modalKnowsModal {
+    h5{
+        margin-left: 1vh;
+    }
+    background-color: rgb(66, 83, 83);
+}
