--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
             <p id="owner"></p>
         </div>
         <ul>
-            <li (click)="goToHome()"><span>inicio</span></li>
-            <li><span>proyectos</span></li>
-            <li><span>contacto</span></li>
-            <li><span>redes</span></li>
+            <li (click)="goToHome()" class="border border-info rounded-end rounded-8"><span>inicio</span></li>
+            <li class="border border-info"><span>proyectos</span></li>
+            <li class="border border-info"><span>contacto</span></li>
+            <li class="border border-info rounded-start rounded-8"><span>redes</span></li>
         </ul>
     </nav>
 </header>
