--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,35 +3,37 @@
     font-family: orangekid;
     src: url("../../assets/fonts/orange_kid.ttf");
 }
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
 //imports of other SCSS...
 
 //------------------------------------- MIXINS -------------------------------------------------------------
 //Definir proporciones y background de la animacion
-@mixin animatedFrames($color1,$color2,$color3, $color4, $color5,$color6){
-    background-image: conic-gradient(
-        from var(--border-angle),
-        $color1,
-        $color2,
-        $color3
-    ),conic-gradient(from var(--border-angle), $color4, $color5, $color6);
-    background-size: calc(100% - (var(--border-size) * 2))
-        calc(100% - (var(--border-size) * 2)),
-      cover;
-}
+
+// @mixin animatedFrames($color1,$color2,$color3, $color4, $color5,$color6){
+//     background-image: conic-gradient(
+//         from var(--border-angle),
+//         $color1,
+//         $color2,
+//         $color3
+//     ),conic-gradient(from var(--border-angle), $color4, $color5, $color6);
+//     background-size: calc(100% - (var(--border-size) * 2))
+//         calc(100% - (var(--border-size) * 2)),
+//       cover;
+// }
 //Definiendo la animacion en si
-@mixin marcoAnimadoMedidas($borderSize, $borderAngle,$color1, $color2, $color3, $color4, $color5, $color6){
-    @include animatedFrames($color1, $color2, $color3, $color4, $color5, $color6);
-    --border-size: 3px;
-    --border-angle: 0turn;
-    background-position: center center;
-    background-repeat: no-repeat;
-    animation: bg-spin 3s linear infinite;
-    @keyframes bg-spin {
-      to {
-        --border-angle: 1turn;
-      }
-    }
-}
+// @mixin marcoAnimadoMedidas($borderSize, $borderAngle,$color1, $color2, $color3, $color4, $color5, $color6){
+//     @include animatedFrames($color1, $color2, $color3, $color4, $color5, $color6);
+//     --border-size: 3px;
+//     --border-angle: 0turn;
+//     background-position: center center;
+//     background-repeat: no-repeat;
+//     animation: bg-spin 3s linear infinite;
+//     @keyframes bg-spin {
+//       to {
+//         --border-angle: 1turn;
+//       }
+//     }
+// }
 //Placeholders
 //Modulando la animacion para usarlo en otros posibles lugares sin repetir brutalmente el codigo
 //NECESITO CAMBIAR ESTOS PLACEHOLDERS A MIXINS, LO HARE TOMORROW
@@ -39,7 +41,7 @@
 
 //Clases especiales para animaciones/decoraciones
 #marcoAnimado{
-    @include marcoAnimadoMedidas(3px,0turn,#213, #112 50%, #213, transparent 20%, #08f, #f03);
+    // @include marcoAnimadoMedidas(3px,0turn,#213, #112 50%, #213, transparent 20%, #08f, #f03);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,7 +54,8 @@ header{
     position:sticky;
     top: 0;
     z-index: 1000;
-    background: linear-gradient(0deg, rgba(63,94,251,1) 15%, rgba(252,70,107,1) 100%);
+    // background: linear-gradient(0deg, transparent 10%, #11232F 100%);
+    background: linear-gradient(0deg, transparent 1%,  rgba(17,35,47,1) 99%);
     #maxWidth{
         display: flex;
         width: 100%;
@@ -62,8 +65,9 @@ header{
             #marcoAnimado{
                 display: flex;
             }
-            p{
+            #owner{
                 margin: 0;
+                font-family: 'Kanit', sans-serif;
             }
         }
         ul{
@@ -76,28 +80,20 @@ header{
             };
             padding: 0;
             li{
-                @include marcoAnimadoMedidas(3px,0turn,#213, #112 50%, #213, transparent 20%, #08f, #f03);
+                // @include marcoAnimadoMedidas(3px,0turn,#213, #112 50%, #213, transparent 20%, #08f, #f03);
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 list-style: none;
                 font-family: orangekid;
-                color: rgb(100, 18, 100);
-                transition: 1s;
+                color: white;
+                background-color: #0C2331;
                 cursor: pointer;
                 &:hover{    
-                    background-image: conic-gradient(
-                        from var(--border-angle),
-                        rgb(78, 40, 66),
-                        rgb(83, 12, 54),
-                        rgb(78, 40, 66)
-                    ),conic-gradient(from var(--border-angle), rgb(77, 14, 43), #47021d, #3d073a);
-                    background-size: calc(100% - (var(--border-size) * 2))
-                        calc(100% - (var(--border-size) * 2)),
-                      cover;
-                    color: white;
-                    animation-play-state: paused;
-                    opacity: 0.7;
+                    color: #00FFFF;
+                    background-color: #4A545C;
+                    transition-duration: 0.5s;
+                    border-color: white;
                 }
             }
         }
