--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -2,7 +2,7 @@
 
 main{
     margin-top: -1px;
-    background-color: rgba(63,94,251,1);
+    // background-color: rgba(63,94,251,1);
     #textoAnimado{
         display: flex;
         justify-content: center;
@@ -46,7 +46,7 @@ main{
                 display: flex;
                 #cadif1logo{
                     display: flex;
-                    background: linear-gradient(0deg, rgba(63,94,251,1) 3%, rgb(247, 246, 245) 57%, rgba(63,94,251,1) 97%);
+                    background: linear-gradient(0deg, transparent 3%, rgb(247, 246, 245) 57%, transparent 97%);
                 }
             }
             span{
@@ -208,6 +208,15 @@ main{
                     }
                 }
             } 
+        }
+    }
+}
+
+@media only screen and (min-width: 700px){
+    #AboutMe{
+        padding: {
+            right: 10%;
+            left: 10%;
         }
     }
 }
