--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,3 +1,4 @@
+<!-- MODAL DE CERTIFICACIONES PARA EL MAIN COMPONENT -->
 <div *ngIf="path === '/home' && originBtn === 'certsBtn'">
   <div class="modal-header {{bgColor}}">
     <h5 class="modal-title {{titleColor}}" id="exampleModalLabel">{{ title }}</h5>
@@ -19,9 +20,11 @@
   </div>
 </div>
 
+<!-- MODAL DE CONOCIMIENTOS PARA EL MAIN COMPONENT -->
 <div *ngIf="path === '/home' && originBtn === 'btnKnows'">
-  <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+  <div class="modal-header modalKnowsModal">
+    <img id="mdlKnowImg" src="{{src}}" alt="">
+    <h5 class="modal-title text-info" id="exampleModalLabel">{{name}}</h5>
     <button
       type="button"
       class="btn-close"
@@ -29,11 +32,26 @@
       (click)="modalRef.close()"
     ></button>
   </div>
-  <div class="modal-body">...</div>
-  <div class="modal-footer">
+  <div class="modal-body modalKnowsModal">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col" class="text-info">#</th>
+          <th scope="col" class="text-info">Conomientos</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let element of desc; let i = index">
+          <th class="text-info"scope="row">{{i+1}}</th>
+          <td class="text-info">{{element}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="modal-footer modalKnowsModal">
     <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
-      Close
+      Cerrar
     </button>
-    <button type="button" class="btn btn-primary">Save changes</button>
+    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
   </div>
 </div>
