--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,13 @@
 @import 'node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
  
 @import 'node_modules/mdb-angular-ui-kit/assets/scss/mdb.scss';
+html{
+    body{
+        // background-color: rgba(63,94,251,1);
+        background-image: url("./assets/img/space2Front.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+}
