Reparando las rutas de origen de las imagenes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <nav id="maxWidth">
         <div id="titleFrame">
             <div id="marcoAnimado" >
-                <img class="img-thumbnail rounded-circle" src="../../../assets/img/logo.png" alt="logo">
+                <img class="img-thumbnail rounded-circle" src="assets/img/logo.png" alt="logo">
             </div>
             <p id="owner"></p>
         </div>
