--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -29,7 +29,7 @@
             <div id="cadif1">
                 <span>Front-End</span>
                 <div id="cadif1logo">
-                    <img src="../../../assets/img/logo-cadif1.svg" alt="">
+                    <img src="assets/img/logo-cadif1.svg" alt="">
                 </div>
                 <p>
                     - Obtencion de los certificados de:
