--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,6 +4,7 @@
     src: url("../../assets/fonts/orange_kid.ttf");
 }
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 //imports of other SCSS...
 
 //------------------------------------- MIXINS -------------------------------------------------------------
