--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -15,6 +15,10 @@ main{
         margin: {
             top: 10px;
         }
+        #AboutMe{
+            text-align: center;
+            max-width: 1000px;
+        }
         span{
             color:aqua;
             font-family: orangekid;
@@ -217,6 +221,16 @@ main{
         padding: {
             right: 10%;
             left: 10%;
+        }
+    }
+}
+
+@media only screen and (min-width: 600px){
+    main{
+        .parent{
+            span{
+                font-size: 3em;
+            }
         }
     }
 }
