Reparado el bug de los modales con el scroll, y creado un scroll customizado junto con un ligero cambio en el color del hover de los li del navbar

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -92,7 +92,7 @@ header{
                 cursor: pointer;
                 &:hover{    
                     color: #00FFFF;
-                    background-color: #4A545C;
+                    background-color: #0E1668;
                     transition-duration: 0.5s;
                     border-color: white;
                 }
