--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -13,7 +13,13 @@
             <p>
                 Comence aprendiendo lo básico sobre fundamentos de la programación para tener una idea
                 clara de cómo confeccionar mi código a travez de cualquier lenguaje de programacion
-                y actualmente aprendo y mejorar mis conocimientos sobre desarrollo Front y Backend
+                y actualmente aprendo y mejorar mis conocimientos sobre desarrollo Front y Backend.
+            </p>
+            <p>
+                He hecho varios proyectos en el que se requiere de los conocimientos mostrados para
+                confeccionar paginas web que sean del atractivo del publico siempre pensando en la mantenibilidad
+                y correcto funcionamento para que se pueda ver bien no solo en computadores, sino en cualquier
+                dispositivo con un patron de diseño dinamico.
             </p>
         </article>
         <span>¿Cuales son mis conocimientos?</span>
