--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -114,6 +114,9 @@ main{
                 flex-flow: nowrap column;
                 align-items: center;
                 width: 100%;
+                padding: {
+                    bottom: 3em;
+                }
                 #cadif1{
                     flex-flow: nowrap column;
                     align-items: center; 
@@ -192,6 +195,9 @@ main{
                 flex-flow: nowrap column;
                 align-items: center;
                 width: 100%;
+                padding: {
+                    bottom: 3em;
+                }
                 #cadif1{
                     flex-flow: nowrap column;
                     align-items: center; 
