Reparado el header para celulares, ahora siendo un menu 100% en el fondo de la pagina, aunque falta reparar el problema de redirigimiento de los span cambiados por anchors

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,7 +4,10 @@ footer{
     justify-content: center;
     align-items: center;
     margin-top: -1px;
-    height: 5vh;
+    height: 10vh;
+    padding: {
+        bottom: 5em;
+    }
     background: linear-gradient(0deg, #11232F 74%, transparent 100%);
     font-size: .8em;
     p{
