--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -12,17 +12,18 @@
             </p>
             <p>
                 Comence aprendiendo lo básico sobre fundamentos de la programación para tener una idea
-                clara de cómo confeccionar mi código a travez de cualquier lenguaje de programacion
-                y actualmente aprendo y mejorar mis conocimientos sobre desarrollo Front y Backend.
+                clara de cómo confeccionar mi código a través de cualquier lenguaje de programación
+                y actualmente aprendo y mejoro mis conocimientos sobre desarrollo Front y Backend.
             </p>
             <p>
                 He hecho varios proyectos en el que se requiere de los conocimientos mostrados para
-                confeccionar paginas web que sean del atractivo del publico siempre pensando en la mantenibilidad
-                y correcto funcionamento para que se pueda ver bien no solo en computadores, sino en cualquier
-                dispositivo con un patron de diseño dinamico.
+                confeccionar páginas web que sean del atractivo del público, siempre pensando en la mantenibilidad
+                y correcto funcionamento para que se pueda ver bien no sólo en computadores, sino en cualquier
+                dispositivo con un patrón de diseño dinámico. (Aunque también quiero aprender a desarrollar
+                videojuegos).
             </p>
         </article>
-        <span>¿Cuales son mis conocimientos?</span>
+        <span>¿Cuáles son mis conocimientos?</span>
         <article id="knowledges">
             <div class="know{{i+1}}" *ngFor="let know of conocimientos; let i=index">
                 <div>
