--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -50,7 +50,7 @@ main{
                 display: flex;
                 #cadif1logo{
                     display: flex;
-                    background: linear-gradient(0deg, transparent 3%, rgb(247, 246, 245) 57%, transparent 97%);
+                    // background: linear-gradient(0deg, transparent 3%, rgb(247, 246, 245) 57%, transparent 97%);
                 }
             }
             span{
