--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -31,7 +31,7 @@
       <thead>
         <tr>
           <th scope="col" class="text-info">#</th>
-          <th scope="col" class="text-info">Conomientos</th>
+          <th scope="col" class="text-info">Conocimientos</th>
         </tr>
       </thead>
       <tbody>
