--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -87,14 +87,21 @@ header{
                 align-items: center;
                 list-style: none;
                 font-family: orangekid;
-                color: white;
-                background-color: #0C2331;
+                // color: white;
+                // background-color: #0C2331;
+                background-color: transparent;
                 cursor: pointer;
+                a{
+                    color: white;          
+                }    
                 &:hover{    
-                    color: #00FFFF;
                     background-color: #0E1668;
                     transition-duration: 0.5s;
                     border-color: white;
+                    a{
+                        color: #00FFFF;
+                        transition-duration: 0.5s;
+                    }
                 }
             }
         }
@@ -143,14 +150,17 @@ header{
             ul{
                 // width: 98%;
                 // height: 30%;
-                width: 98%;
+                width: 100%;
                 height: 7%;
                 position: fixed;
-                bottom: 5%;
+                bottom: 0%;
+                background: linear-gradient(0deg, transparent 10%, rgba(49,164,250,1) 21%, transparent 89%);
+                align-items: end;
                 li{
                     width: 24%;
                     height: 75%;
                     font-size: 1.1em;
+                    background-color: #10222D;
                 }     
             }
         }
@@ -184,14 +194,17 @@ header{
             ul{
                 // width: 98%;
                 // height: 30%;
-                width: 98%;
+                width: 100%;
                 height: 7%;
                 position: fixed;
-                bottom: 5%;
+                bottom: 0%;
+                background: linear-gradient(0deg, transparent 10%, rgba(49,164,250,1) 21%, transparent 89%);
+                align-items: end;
                 li{
                     width: 25%;
                     height: 80%;
                     font-size: 1.5em;
+                    background-color: #10222D;
                 }   
             }
         }
