Creacion del componente de proyectos y proceder a reparar un bug encontrado en las animaciones de escritura

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
             <p id="owner"></p>
         </div>
         <ul>
-            <li (click)="goToHome()" class="border-bottom border-info rounded-top"><a href="#">inicio</a></li>
-            <li class="border-bottom border-info rounded-top"><a href="#">proyectos</a></li>
+            <li (click)="goTo($event)" class="border-bottom border-info rounded-top"><a href="#">inicio</a></li>
+            <li (click)="goTo($event)" class="border-bottom border-info rounded-top"><a href="#">proyectos</a></li>
             <li class="border-bottom border-info rounded-top"><a href="#">contacto</a></li>
             <li class="border-bottom border-info rounded-top"><a href="#">redes</a></li>
         </ul>
