--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ html{
         padding-right: 0 !important; 
         // overflow: overlay !important;
         background-image: url("./assets/img/space2Front.jpg");
+        // background-image: url("./assets/img/dekstopFrontPage2.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
