--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -36,6 +36,9 @@ main{
                         border: 1px solid transparent;
                         div{
                             width: 100%;
+                            height: 100%;
+                            display: flex;
+                            align-items: center;
                             img{
                                 cursor: pointer;
                             }
