Agregado de proyectos WEB hechos por mi en el componente de proyectos

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <div id="marcoAnimado" >
                 <img class="img-thumbnail rounded-circle" src="assets/img/logo.png" alt="logo">
             </div>
-            <p id="owner"></p>
+            <p id="owner" class="text-danger">Magus Developer</p>
         </div>
         <ul>
             <li (click)="goTo($event)" class="border-bottom border-info rounded-top"><a href="#">inicio</a></li>
