--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -2,13 +2,16 @@ main {
     display: flex;
     .projects{
         font-family: orangekid;
+        background: #10212D;
+        background: rgba(transparent, 0.3);
+        z-index: 0;
         img{
 
         }
         .projectContext{
             display: flex;
             button{
-                z-index: -1;
+
             }
         }
     }
@@ -39,12 +42,10 @@ main {
                     right: 0.3em;
                 }
                 button{
-                    z-index: -1;
+                   
                 }
             }
         }
     }
 }
 
-// background: #10212D;
-// background: rgba(transparent, 0.5);
