--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,51 +1,147 @@
 main {
     display: flex;
-    .projects{
-        font-family: orangekid;
-        background: #10212D;
-        background: rgba(transparent, 0.3);
-        z-index: 0;
-        img{
-
-        }
-        .projectContext{
+    #contextFlex{
+        display: flex;
+        // width: 100%;
+        .projects{
+            font-family: orangekid;
+            background: #10212D;
+            background: rgba(transparent, 0.3);
+            z-index: 0;
             display: flex;
-            button{
-
+            img{
+    
+            }
+            .projectContext{
+                display: flex;
+                .textContext{
+                }
             }
         }
     }
 }
 
 //MEDIA QUERIES
-@media only screen and (max-width: 360px){
+@media only screen and (max-width: 445px){ //max-width era de 360px, ideal 416px
     main{
         flex-flow: wrap column;
         align-items: center;
-        .projects{
-            font-family: orangekid;
-            width: 90%;
-            margin: {
-                bottom: 1em;
-            }
-            img{
-                width: 100%;
-                max-height:162px;
-            }
-            .projectContext{
-                flex-flow: wrap column;
+        #contextFlex{
+            width: 100%;
+            flex-flow: wrap column;
+            align-items: center;
+            .projects{
+                font-family: orangekid;
+                flex-flow: nowrap column;
+                justify-content: center;
                 align-items: center;
-                font-size: 1.2em;
-                padding: {
-                    bottom: 0.5em;
-                    left: 0.3em;
-                    right: 0.3em;
+                width: 90%;
+                margin: {
+                    bottom: 1em;
                 }
-                button{
-                   
+                button {
+                    width: 40%;
+                    padding: {
+                        bottom: 0.5em;
+                        top: 0.5em;
+                        left: 1em;
+                        right: 1em;
+                    }
+                    margin-bottom: 0.5em;
+                }
+                img{
+                    width: 100%;
+                    max-height:162px;
+                }
+                .projectContext{
+                    flex-flow: wrap column;
+                    align-items: center;
+                    font-size: 1.2em;
+                    justify-content: space-between;
+                    .textContext{
+                        flex-flow: nowrap column;
+                        align-items: center;
+                        h2{
+                            text-align: center;
+                        }
+                        padding: {
+                            // bottom: 0.5em;
+                            left: 0.3em;
+                            right: 0.3em;
+                        }
+                    }
                 }
             }
         }
     }
 }
+
+@media only screen and (min-width: 446px) {
+    main{
+        flex-flow: wrap column;
+        align-items: center;
+        #contextFlex{
+            width: 100%;
+            flex-flow: wrap row;
+            justify-content: space-evenly;
+            // align-items: center;
+            .projects{
+                font-family: orangekid;
+                width: 47%;
+                margin: {
+                    bottom: 0.5em;
+                }
+                img{
+                    width: 100%;
+                    max-height:162px;
+                }
+                .projectContext{
+                    flex-flow: wrap column;
+                    align-items: center;
+                    font-size: 1.2em;
+                    padding: {
+                        bottom: 0.5em;
+                        left: 0.3em;
+                        right: 0.3em;
+                    }
+                    h2{
+                       text-align: center;
+                    }
+                }
+            }
+        }
+    }
+    //MAX WIDTH DE CONTENEDORES DE 244px;
+}
+
+// @media only screen and (min-width: 540px){
+//     main{
+//         flex-flow: wrap row;
+//         // align-items: center;
+//         .projects{
+//             font-family: orangekid;
+            
+//             margin: {
+//                 bottom: 1em;
+//             }
+//             img{
+//                 width: 100%;
+//                 max-height:162px;
+//             }
+//             .projectContext{
+//                 flex-flow: wrap column;
+//                 align-items: center;
+//                 font-size: 1.2em;
+//                 padding: {
+//                     bottom: 0.5em;
+//                     left: 0.3em;
+//                     right: 0.3em;
+//                 }
+//                 h2{
+//                    text-align: center;
+//                 }
+//             }
+//         }
+//     }
+// }
 
