Portafolio casi completado, solo falta los detalles de visualizacion de los proyectos

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
             <p id="owner" class="text-danger">Magus Developer</p>
         </div>
         <ul>
-            <li (click)="goTo($event)" class="border-bottom border-info rounded-top"><a href="#">inicio</a></li>
-            <li (click)="goTo($event)" class="border-bottom border-info rounded-top"><a href="#">proyectos</a></li>
-            <li class="border-bottom border-info rounded-top"><a href="#">contacto</a></li>
-            <li class="border-bottom border-info rounded-top"><a href="#">redes</a></li>
+            <li (click)="goTo($event)" class="border-bottom border-info rounded-top text-light">inicio</li>
+            <li (click)="goTo($event)" class="border-bottom border-info rounded-top text-light">proyectos</li>
+            <li (click)="goToContacts()" class="border-bottom border-info rounded-top text-light">contacto</li>
+            <!-- <li class="border-bottom border-info rounded-top"><a href="#">redes</a></li> -->
         </ul>
     </nav>
 </header>
