--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,11 @@ html{
     // width: 100%;
     body{
         width: 100%;
+        // display: flex;
+        // flex-flow: nowrap column;
+        // justify-content: center;
         padding-right: 0 !important; 
-        // overflow: overlay !important;
         background-image: url("./assets/img/space2Front.jpg");
-        // background-image: url("./assets/img/dekstopFrontPage2.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -21,24 +22,12 @@ html{
 }
 //PONER ANTERIOR A ESTE LA ETIQUETA BODY PARA QUE SOLO AFECTE EL BODY
 //Aqui controlar todo el scrollbar
-body::-webkit-scrollbar{
-    width: 1em;
-}
 
 //La barra con la que haces el scroll
-body::-webkit-scrollbar-thumb{
-    border-radius: 100vw;
-    background-color: rgb(3, 7, 27);
-    border: .25em solid rgb(9, 19, 36);
-    &:hover{
-        background-color: #10212D;
-    }
-}
+
 
 //Maneja el scroll
-body::-webkit-scrollbar-track{
-    background-color: #1f2f52;
-}
+
 
 // ::-webkit-scrollbar { 
 //     display: none; 
