--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,39 +7,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 //imports of other SCSS...
 
-//------------------------------------- MIXINS -------------------------------------------------------------
-//Definir proporciones y background de la animacion
-
-// @mixin animatedFrames($color1,$color2,$color3, $color4, $color5,$color6){
-//     background-image: conic-gradient(
-//         from var(--border-angle),
-//         $color1,
-//         $color2,
-//         $color3
-//     ),conic-gradient(from var(--border-angle), $color4, $color5, $color6);
-//     background-size: calc(100% - (var(--border-size) * 2))
-//         calc(100% - (var(--border-size) * 2)),
-//       cover;
-// }
-//Definiendo la animacion en si
-// @mixin marcoAnimadoMedidas($borderSize, $borderAngle,$color1, $color2, $color3, $color4, $color5, $color6){
-//     @include animatedFrames($color1, $color2, $color3, $color4, $color5, $color6);
-//     --border-size: 3px;
-//     --border-angle: 0turn;
-//     background-position: center center;
-//     background-repeat: no-repeat;
-//     animation: bg-spin 3s linear infinite;
-//     @keyframes bg-spin {
-//       to {
-//         --border-angle: 1turn;
-//       }
-//     }
-// }
-//Placeholders
-//Modulando la animacion para usarlo en otros posibles lugares sin repetir brutalmente el codigo
-//NECESITO CAMBIAR ESTOS PLACEHOLDERS A MIXINS, LO HARE TOMORROW
-
-
 //Clases especiales para animaciones/decoraciones
 #marcoAnimado{
     // @include marcoAnimadoMedidas(3px,0turn,#213, #112 50%, #213, transparent 20%, #08f, #f03);
@@ -52,10 +19,7 @@
 //-------------------------------------------- HEADER -----------------------------------------
 header{
     display: flex;
-    // position:sticky;
-    // top: 0;
     z-index: 500;
-    // background: linear-gradient(0deg, transparent 10%, #11232F 100%);
     background: linear-gradient(0deg, transparent 1%,  rgba(17,35,47,1) 99%);
     #maxWidth{
         display: flex;
@@ -82,14 +46,12 @@ header{
             };
             padding: 0;
             li{
-                // @include marcoAnimadoMedidas(3px,0turn,#213, #112 50%, #213, transparent 20%, #08f, #f03);
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 list-style: none;
                 font-family: orangekid;
-                // color: white;
-                // background-color: #0C2331;
+
                 background-color: transparent;
                 cursor: pointer;
                 a{
@@ -113,19 +75,9 @@ header{
 /*Header for Mobile (small ones)*/
 @media only screen and (max-width: 360px){ //should be 280px
     header{
-        // height: 180px;
-        height: 100px;
         flex-flow: column nowrap;
         justify-content: center;
         align-items: center;
-        #langChanger{
-            position: absolute;
-            bottom: 70%;
-            right: 80%;
-            width: 50px;
-            height: 50px;
-            appearance: none;
-        }
         #maxWidth{
             flex-flow: column nowrap;
             align-items: center;
@@ -147,10 +99,7 @@ header{
                     }
                 }
             }
-    
             ul{
-                // width: 98%;
-                // height: 30%;
                 width: 100%;
                 height: 7%;
                 position: fixed;
@@ -158,7 +107,8 @@ header{
                 background: linear-gradient(0deg, rgba(49,164,250,1) 21%, transparent 89%);
                 align-items: end;
                 li{
-                    width: 24%;
+                    // width: 24%;
+                    width: 33%;
                     height: 75%;
                     font-size: 1.1em;
                     background-color: #10222D;
@@ -193,8 +143,6 @@ header{
                 }
             }
             ul{
-                // width: 98%;
-                // height: 30%;
                 width: 100%;
                 height: 7%;
                 position: fixed;
@@ -202,7 +150,8 @@ header{
                 background: linear-gradient(0deg, rgba(49,164,250,1) 21%, transparent 89%);
                 align-items: end;
                 li{
-                    width: 25%;
+                    // width: 25%;
+                    width: 33%;
                     height: 80%;
                     font-size: 1.5em;
                     background-color: #10222D;
@@ -230,7 +179,8 @@ header{
             align-items: center;
             justify-content: center;
             height: 100px;
-            max-width: 1000px;
+            // max-width: 1000px;
+            max-width: 80vw;
             #titleFrame{
                 flex-flow: row nowrap;
                 //justify-content: center;
@@ -258,7 +208,8 @@ header{
                 width: 50%;
                 height: 50%;
                 li{
-                    width: 24%;
+                    // width: 24%;
+                    width: 30%;
                     height: 75%;
                     font-size: 1.2em;
                 }     
@@ -267,8 +218,3 @@ header{
     }
 }
 //Properties
-@property --border-angle {
-    syntax: "<angle>";
-    inherits: true;
-    initial-value: 0turn;
-}
