--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -47,4 +47,20 @@
       Cerrar
     </button>
   </div>
-<!-- </div> -->
+<!--MODAL DE PROYECTOS-->
+<div class="modal-header" *ngIf="path === '/projects'">
+  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+  <button
+    type="button"
+    class="btn-close"
+    aria-label="Close"
+    (click)="modalRef.close()"
+  ></button>
+</div>
+<div class="modal-body" *ngIf="path === '/projects'">...</div>
+<div class="modal-footer" *ngIf="path === '/projects'">
+  <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+    Close
+  </button>
+  <button type="button" class="btn btn-primary">Save changes</button>
+</div>
