--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,13 +1,26 @@
 <app-header></app-header>
 <main>
     <h2 class="text-light">Paginas web</h2>
-    <div id="contextFlex">
+    <div class="contextFlex">
         <div class="projects border border-4 border-info rounded" *ngFor="let project of projects; let i = index">
             <div class="projectContext">
                 <img src="{{project.src}}" alt="Fissure in Sandstone"/>
                 <div class="textContext">
                     <h2 class="text-secondary">{{project.titulo}}</h2>
                     <p class="text-light">{{[project.description]}}</p>
+                </div>
+            </div>
+            <button (click)="openModalProjects($event)" type="button" class="btn btn-info" mdbRipple>Ver proyecto</button>
+        </div>
+    </div>
+    <h2 class="text-light">Juegos</h2>
+    <div class="contextFlex">
+        <div class="projects border border-4 border-info rounded" *ngFor="let project2 of projectsGame; let i = index">
+            <div class="projectContext">
+                <img src="{{project2.src}}" alt="Fissure in Sandstone"/>
+                <div class="textContext">
+                    <h2 class="text-secondary">{{project2.titulo}}</h2>
+                    <p class="text-light">{{[project2.description]}}</p>
                 </div>
             </div>
             <button type="button" class="btn btn-info" mdbRipple>Ver proyecto</button>
