--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,6 +1,7 @@
 main {
     display: flex;
-    #contextFlex{
+    justify-content: center;
+    .contextFlex{
         display: flex;
         // width: 100%;
         .projects{
@@ -22,11 +23,11 @@ main {
 }
 
 //MEDIA QUERIES
-@media only screen and (max-width: 445px){ //max-width era de 360px, ideal 416px
+@media only screen and (max-width: 367px){ //max-width era de 360px, ideal 416px
     main{
         flex-flow: wrap column;
         align-items: center;
-        #contextFlex{
+        .contextFlex{
             width: 100%;
             flex-flow: wrap column;
             align-items: center;
@@ -76,72 +77,67 @@ main {
     }
 }
 
-@media only screen and (min-width: 446px) {
+@media only screen and (min-width: 368px) { //and (max-width: 700px)
     main{
-        flex-flow: wrap column;
+        flex-flow: wrap row;
         align-items: center;
-        #contextFlex{
+        .contextFlex{
             width: 100%;
-            flex-flow: wrap row;
-            justify-content: space-evenly;
+            // height: 60vh;
+            height: 360px;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            flex-flow: nowrap row;
+            // justify-content: space-evenly;
             // align-items: center;
+            padding: {
+                left: 1%;
+            }
             .projects{
-                font-family: orangekid;
-                width: 47%;
+                flex-flow: column nowrap;
+                // min-width: 30%;
+                min-width: 190px;
+                max-width:190px;
+                height: 100%;
+                justify-content: space-between;
+                align-items: center;
+                font-family: orangekid;           
                 margin: {
-                    bottom: 0.5em;
-                }
+                    right: 1em;
+                }              
                 img{
                     width: 100%;
-                    max-height:162px;
+                    height: 100px;
+                    object-fit: cover;
                 }
                 .projectContext{
                     flex-flow: wrap column;
                     align-items: center;
-                    font-size: 1.2em;
-                    padding: {
-                        bottom: 0.5em;
-                        left: 0.3em;
-                        right: 0.3em;
+                    font-size: 1em;
+                    .textContext{
+                        padding: {
+                            left: 0.3em;
+                            right: 0.3em;
+                        }
                     }
                     h2{
+                       line-height: 2;
                        text-align: center;
+                       font-size: 1.2em;
+                       height: 35px;
                     }
+                }
+                p{
+                    margin: 0 !important;
+                }
+                button{
+                    width: 90%;
+                    margin: {
+                        bottom: 1em;
+                    };
                 }
             }
         }
     }
     //MAX WIDTH DE CONTENEDORES DE 244px;
 }
-
-// @media only screen and (min-width: 540px){
-//     main{
-//         flex-flow: wrap row;
-//         // align-items: center;
-//         .projects{
-//             font-family: orangekid;
-            
-//             margin: {
-//                 bottom: 1em;
-//             }
-//             img{
-//                 width: 100%;
-//                 max-height:162px;
-//             }
-//             .projectContext{
-//                 flex-flow: wrap column;
-//                 align-items: center;
-//                 font-size: 1.2em;
-//                 padding: {
-//                     bottom: 0.5em;
-//                     left: 0.3em;
-//                     right: 0.3em;
-//                 }
-//                 h2{
-//                    text-align: center;
-//                 }
-//             }
-//         }
-//     }
-// }
-
